--- a/templates/tracking.html
+++ b/templates/tracking.html
@@ -11,7 +11,9 @@
     <div class="info-box">
         <p><strong>Segment:</strong> <span id="current-segment">0</span> / <span id="total-segments">{{ total_segments }}</span></p>
         <p><strong>Elevation Gain:</strong> <span id="elevation-gain">--</span> m | <strong>Elevation Loss:</strong> <span id="elevation-loss">--</span> m</p>
-        <p><strong>Segment Predicted Pace:</strong> <span id="predicted-pace">--:--</span> min/km</p>
+        <p style="font-size: 32px; font-weight: bold; color: #3498db; margin-top: 15px;">
+        <strong>Segment Predicted Pace:</strong> <span id="predicted-pace">--:--</span> min/km
+        </p>
     </div>
 
     <div class="timer-display" id="total-timer">00:00:00</div>
