--- a/templates/summary.html
+++ b/templates/summary.html
@@ -81,7 +81,7 @@
     </table>
 
     <div class="text-center mt-20">
-        <a href="{{ url_for('deeper_analytics') }}" class="button button-success">View Deeper Analytics 🔍</a>
+        <a href="{{ url_for('deeper_analytics') }}" class="button button-purple">View Deeper Analytics 🔍</a>
         <a href="{{ url_for('index') }}" class="button button-primary">New Run</a>
     </div>
 
