Fixed timing issues

--- a/templates/results.html
+++ b/templates/results.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Your Pace Plans for your {{ total_distance }} km Run</h1>
+    <h1>Your Pace Plans</h1>
 
     <h2>Uncoached and Coached Pace Plans</h2>
 
